--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,8 @@ body {
     width: 20%;
     height: 5%;
     font-size: 2em;
+    font-size: 2vw;
+
     background-color: var(--zomp);
     color: white;
     border-color: black;
@@ -31,6 +33,7 @@ body {
 }
 .Timer {
     font-size: 2em;
+    font-size: 2vw;
     background-color: var(--queen-blue);
     width: 10%;
     margin: 0 auto;
@@ -49,6 +52,7 @@ body {
     display: inline-block;
     padding-bottom: 2%;
     font-size: 1.5em;
+    font-size: 1.5vw;
 }
 @keyframes TileSelectAnimation {
   from {background-color: white;}
@@ -66,6 +70,7 @@ input:focus{
 .FoundWords{
     width: 20%;
     font-size: 2em;
+    font-size: 2vw;
     border-radius: 10px;
 }
 .FoundWords.list{
@@ -91,6 +96,7 @@ input:focus{
     width: 20%;
     height: 20%;
     font-size: 3em;
+    font-size: 3vw;
     border-radius: 10px;
     background-color: white;
     border-style: solid;
@@ -109,6 +115,7 @@ input:focus{
 }
 .PlayerScore {
     font-size: 2em;
+    font-size: 2vw;
     padding-top: 1%;
     width: 20%;
     text-align: center;
