--- a/src/App.css
+++ b/src/App.css
@@ -50,9 +50,13 @@ body {
     border-radius: 10px;
     margin: 1%;
     display: inline-block;
-    padding-bottom: 2%;
-    font-size: 1.5em;
-    font-size: 1.5vw;
+    font-size: 4em;
+    font-size: 4vw;
+}
+.Score {
+    text-align: center;
+    font-size: 2em;
+    font-size: 2vw;
 }
 @keyframes TileSelectAnimation {
   from {background-color: white;}
@@ -108,11 +112,7 @@ input:focus{
     background-color: var(--red-salsa);
     color:white;
 }
-.Score {
-    text-align: left;
-    padding-left: 5%;
-    padding-top: 5%;
-}
+
 .PlayerScore {
     font-size: 2em;
     font-size: 2vw;
